--- a/ggame/ggame.csproj
+++ b/ggame/ggame.csproj
@@ -8,4 +8,13 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="UserControl1.cs" />
+    <Compile Remove="UserControl1.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Remove="UserControl1.resx" />
+  </ItemGroup>
+
 </Project>
